[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/sprites/UI/titleBG2test2.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/player/target.png" type="Texture" id=2]
[ext_resource path="res://UI/Settings/settingsScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/UI/targetOutline.png" type="Texture" id=4]
[ext_resource path="res://Themes/UI.tres" type="Theme" id=5]
[ext_resource path="res://UI.tres" type="Theme" id=6]
[ext_resource path="res://assets/sprites/UI/titleBGJungle2.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/levels/props/targetJungle.png" type="Texture" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="settingScreen" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 321.0 ]
}

[node name="BG" type="Node2D" parent="."]
scale = Vector2( 4, 4 )

[node name="bgDesert" type="TextureRect" parent="BG"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="bgJungle" type="TextureRect" parent="BG"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )

[node name="backMain" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 566.0
margin_top = 412.0
margin_right = 608.0
margin_bottom = 454.0
rect_pivot_offset = Vector2( -82, -254 )
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.309804, 0.262745, 0.180392, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 2

[node name="Label" type="Label" parent="backMain"]
margin_left = -212.0
margin_top = 6.0
margin_right = -4.0
margin_bottom = 38.0
text = "Main menu"
align = 2

[node name="Sprite" type="Sprite" parent="backMain"]
visible = false
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 4 )

[node name="SpriteDesert" type="Sprite" parent="backMain"]
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="SpriteJungle" type="Sprite" parent="backMain"]
visible = false
position = Vector2( 21, 22 )
scale = Vector2( 4, 4 )
texture = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="backMain"]
margin_left = 37.0
margin_top = 19.0
margin_right = 74.0
margin_bottom = 26.0
color = Color( 0.309804, 0.262745, 0.180392, 1 )

[node name="MusicLabel" type="Label" parent="."]
margin_left = 221.0
margin_top = 78.0
margin_right = 421.0
margin_bottom = 110.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.309804, 0.262745, 0.180392, 1 )
text = "Music"
align = 1

[node name="musicVol" type="HSlider" parent="."]
margin_left = 131.0
margin_top = 114.0
margin_right = 512.0
margin_bottom = 146.0
theme = ExtResource( 6 )
min_value = -80.0
max_value = 6.0

[node name="SFXLabel" type="Label" parent="."]
margin_left = 221.0
margin_top = 173.0
margin_right = 421.0
margin_bottom = 205.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.309804, 0.262745, 0.180392, 1 )
text = "Sound effect"
align = 1

[node name="SFXVol" type="HSlider" parent="."]
margin_left = 131.0
margin_top = 208.0
margin_right = 512.0
margin_bottom = 240.0
theme = ExtResource( 6 )
min_value = -80.0
max_value = 6.0

[node name="traumaLabel" type="Label" parent="."]
margin_left = 221.0
margin_top = 267.0
margin_right = 421.0
margin_bottom = 299.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.309804, 0.262745, 0.180392, 1 )
text = "Screenshake force"
align = 1

[node name="TraumaCam" type="HSlider" parent="."]
margin_left = 131.0
margin_top = 303.0
margin_right = 512.0
margin_bottom = 335.0
theme = ExtResource( 6 )
max_value = 1.2
step = 0.05
value = 0.6

[connection signal="mouse_entered" from="backMain" to="." method="_on_backMain_mouse_entered"]
[connection signal="mouse_exited" from="backMain" to="." method="_on_backMain_mouse_exited"]
[connection signal="pressed" from="backMain" to="." method="_on_backMain_pressed"]
[connection signal="value_changed" from="musicVol" to="." method="_on_musicVol_value_changed"]
[connection signal="value_changed" from="SFXVol" to="." method="_on_SFXVol_value_changed"]
[connection signal="value_changed" from="TraumaCam" to="." method="_on_TraumaCam_value_changed"]
